Add the rest of the agent nodes

--- a/data/valid/agent-docker/Jenkinsfile
+++ b/data/valid/agent-docker/Jenkinsfile
@@ -1,9 +1,12 @@
 pipeline {
     agent {
         docker {
+            reuseNode true
             image 'maven:3-alpine'
             label 'my-defined-label'
             args  '-v /tmp:/tmp'
+            registryUrl 'https://myregistry.com/'
+            registryCredentialsId 'myPredefinedCredentialsInJenkins'
         }
     }
 
