--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "jdp"
 source = "src/main.rs"
 
 [dependencies]
+gumdrop = "~0.8.0"
 log = "~0.4.11"
 pest = "~2.1.3"
 pest_derive = "~2.1.0"
