Add support for parsing the script step
This basically treats everything _within_ the script step as a black box

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 
 [lib]
 name = "jdp"
-source = "src/lib.rs"
+path = "src/lib.rs"
 
 [[bin]]
 name = "jdp"
-source = "src/main.rs"
+path = "src/main.rs"
 
 [dependencies]
 gumdrop = "~0.8.0"
