Correct an invalid pipeline (agent is required at the top level)

--- a/data/valid/env-with-credentials/Jenkinsfile
+++ b/data/valid/env-with-credentials/Jenkinsfile
@@ -1,5 +1,6 @@
 // from: https://www.jenkins.io/doc/book/pipeline/jenkinsfile/#handling-credentials
 pipeline {
+    agent any
     environment {
         AWS_ACCESS_KEY_ID     = credentials('jenkins-aws-secret-key-id')
         AWS_SECRET_ACCESS_KEY = credentials('jenkins-aws-secret-access-key')
