--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,12 @@ name = "jdp"
 path = "src/main.rs"
 
 [dependencies]
-gumdrop = "~0.8.0"
-lazy_static = "~1.4.0"
-log = "~0.4.11"
-pest = "~2.1.3"
-pest_derive = "~2.1.0"
-pretty_env_logger = "~0.4.0"
+gumdrop = "0.8"
+lazy_static = "1"
+log = "0.4"
+pest = "2"
+pest_derive = "2"
+pretty_env_logger = "0.4"
 regex = "1"
 
 [dev-dependencies]
